--- a/dashboard.html
+++ b/dashboard.html
@@ -118,7 +118,7 @@
             });
 
             logoutButton.addEventListener('click', function() {
-                window.location.href = 'login_register.html';
+                window.location.href = 'index.html';
             });
         });
     </script>
