--- a/dashboard.html
+++ b/dashboard.html
@@ -12,6 +12,7 @@
             margin: 0;
             padding: 0;
             color: #fff;
+            overflow-x: hidden;
         }
 
         /* Sidebar */
@@ -23,7 +24,7 @@
             position: fixed;
             top: 0;
             left: -240px; /* Hidden by default */
-            transition: left 0.3s ease; /* Animation for sliding in/out */
+            transition: left 0.3s ease-in-out;
             z-index: 999;
         }
 
@@ -74,67 +75,67 @@
             position: fixed;
             top: 0;
             left: 0;
+            transition: padding-left 0.4s ease-in-out;
             z-index: 100;
         }
 
-        /* Arrow for toggle */
+        /* Arrow Toggle */
+        .logo-toggle {
+            padding: 12px;
+            background-color: #333;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
+
         .arrow {
             width: 0;
             height: 0;
             border-left: 10px solid transparent;
             border-right: 10px solid transparent;
-            border-top: 10px solid white; /* Arrow pointing up */
+            border-top: 10px solid white;
             transition: transform 0.3s ease;
-            cursor: pointer;
         }
 
         /* Rotate arrow when sidebar is open */
         .sidebar-open .arrow {
-            transform: rotate(90deg); /* Arrow pointing to the left */
+            transform: rotate(90deg);
+            transition: transform 0.4s ease-in-out;
         }
 
-        /* Header Right (stretches to fill the available space) */
-        .header-right {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            flex-grow: 1;
-            padding-right: 20px;
+        /* Overlay for closing sidebar */
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.5);
+            opacity: 0;
+            visibility: hidden;
+            z-index: 998; /* Below sidebar */
+            transition: opacity 0.3s ease, visibility 0.3s ease;
         }
 
-        .header-right input[type="text"] {
-            padding: 8px 15px;
-            border-radius: 20px;
-            border: none;
-            margin-right: 20px;
-            background-color: #333;
-            color: #fff;
-        }
-
-        .header-right .icon {
-            color: white;
-            font-size: 20px;
-            margin-right: 20px;
-            cursor: pointer;
-        }
-
-        .header-right img {
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
+        /* Show overlay when sidebar is open */
+        .sidebar-open .overlay {
+            opacity: 1;
+            visibility: visible;
         }
 
         /* Main Content */
         main {
-            padding-top: 80px; /* To prevent content from being hidden behind the header */
+            padding-top: 80px;
             background-color: #2c2c2c;
             min-height: 100vh;
-            transition: margin-left 0.3s ease; /* Smooth transition */
+            transition: margin-left 0.3s ease-in-out;
         }
 
         .dashboard-grid {
             display: grid;
-            grid-template-columns: 2fr 1fr 1fr;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             gap: 20px;
         }
 
@@ -144,55 +145,68 @@
             border-radius: 10px;
         }
 
-        .content-block.red {
-            background-color: #ff4747;
-        }
-
         /* When the sidebar is open */
         .sidebar-open aside {
-            left: 0; /* Sidebar slides into view */
+            left: 0;
         }
 
         .sidebar-open main {
-            margin-left: 240px; /* Main content shifts to the right */
+            margin-left: 240px;
         }
 
         .sidebar-open header {
-            padding-left: 270px; /* Header shifts to accommodate sidebar */
+            padding-left: 270px;
         }
+        
+        /* Loader Animation */
+        .loader {
+            border: 8px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            border-top: 8px solid #ff4747;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 20px auto; /* Center the loader */
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
     </style>
 </head>
 <body>
     <!-- Sidebar -->
     <aside id="sidebar">
         <div class="logo">
-            <img src="mobile-logo.png" alt="Bill n' Chill Logo" style="width: 50px; display: inline-block; vertical-align: middle;">
-            <h2 style="display: inline-block; margin-left: 10px; vertical-align: middle; font-size: 20px;">Bill n' Chill</h2>
+            <img src="mobile-logo.png" alt="Bill n' Chill Logo" style="width: 50px;">
+            <h2 style="display: inline-block; margin-left: 10px;">Bill n' Chill</h2>
         </div>
         
         <div class="sidebar-menu">
             <ul>
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Billing</a></li>
-                <li><a href="#">Transaction</a></li>
-                <li><a href="#">Account</a></li>
-                <li><a href="#">Settings</a></li>
+                <li><a href="#" class="nav-link" data-content="dashboard">Dashboard</a></li>
+                <li><a href="#" class="nav-link" data-content="billing">Billing</a></li>
+                <li><a href="#" class="nav-link" data-content="transaction">Transaction</a></li>
+                <li><a href="#" class="nav-link" data-content="account">Account</a></li>
+                <li><a href="#" class="nav-link" data-content="settings">Settings</a></li>
             </ul>
         </div>
         <button class="subscription-btn">Upgrade your SUBSCRIPTION! CLICK ME!!</button>
     </aside>
 
+    <!-- Overlay -->
+    <div class="overlay" id="overlay"></div>
+
     <!-- Header -->
     <header>
-        <!-- Header Logo (acts as toggle for sidebar) -->
-        <div class="logo" id="headerLogoToggle">
-            <div class="arrow"></div> <!-- Arrow Icon for the header -->
+        <div class="logo-toggle" id="headerLogoToggle">
+            <div class="arrow"></div>
         </div>
-
-        <!-- Right Side: Search, Notification, User Avatar -->
         <div class="header-right">
             <input type="text" placeholder="Search here">
-            <span class="icon">&#128276;</span> <!-- Notifications bell icon -->
+            <span class="icon">&#128276;</span>
             <img src="user-avatar.png" alt="User Avatar">
         </div>
     </header>
@@ -200,49 +214,176 @@
     <!-- Main Content -->
     <main>
         <div class="dashboard-grid" id="dashboard">
-            <!-- Cards will be dynamically generated here from the API -->
+            <!-- Default content: will be updated based on sidebar navigation -->
+            <div class="content-block">Welcome to the Dashboard! Click the sidebar items to view more content.</div>
         </div>
     </main>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const headerLogoToggle = document.getElementById('headerLogoToggle');
+            const overlay = document.getElementById('overlay');
             const body = document.body;
+            const dashboard = document.getElementById('dashboard');
+            const navLinks = document.querySelectorAll('.nav-link');
 
-            // Toggle the sidebar when the logo in the header is clicked
+            // Toggle sidebar and overlay
             headerLogoToggle.addEventListener('click', function () {
                 body.classList.toggle('sidebar-open');
             });
 
-         // Fetch finance-related news from NewsAPI
-         fetch('https://newsapi.org/v2/everything?q=finance&apiKey=91e4cec7ae99466bb4b50dd8788291c1')
-            .then(response => response.json())
-            .then(data => {
-                let articles = data.articles.slice(0, 25); // Fetch 5 articles
+            overlay.addEventListener('click', function () {
+                body.classList.remove('sidebar-open');
+            });
+
+            // Function to load content based on the clicked sidebar link
+            const loadContent = (contentType) => {
                 let content = '';
 
-                // Loop through articles to generate cards dynamically
-                articles.forEach(article => {
-                    content += `
-                        <div class="content-block card">
-                            ${article.urlToImage ? `<img src="${article.urlToImage}" class="card-img-top" alt="${article.title}" style="border-radius: 8px 8px 0 0; height: 180px; object-fit: cover;">` : ''}
-                            <div class="card-body" style="padding: 15px;">
-                                <h4 class="card-title" style="font-size: 20px; font-weight: bold; color: #ff4747;">${article.title}</h4>
-                                <p class="card-text" style="color: #ccc; font-size: 14px;">${article.description}</p>
-                                <a href="${article.url}" target="_blank" class="btn btn-read-more" style="background-color: #ff4747; color: #fff; padding: 10px 15px; border-radius: 20px; text-decoration: none;">Read more</a>
+                switch (contentType) {
+                    case 'dashboard':
+                        fetchNews(); // Fetch finance news for the dashboard
+                        break;
+                    case 'billing':
+                        content = `
+                            <div class="content-block">
+                                <h4>Billing Information</h4>
+                                <p>Here you can manage your billing information, view past invoices, and update payment methods.</p>
+                                <ul>
+                                    <li>Billing Address: 123 Main St, Anytown</li>
+                                    <li>Payment Method: Credit Card (**
+**
+** 1234)</li>
+                                    <li>Last Payment Date: January 1, 2024</li>
+                                    <li>Upcoming Payment: January 15, 2024</li>
+                                </ul>
                             </div>
-                        </div>
-                    `;
-                });
+                        `;
+                        break;
+                    case 'transaction':
+                        content = `
+                            <div class="content-block">
+                                <h4>Transaction History</h4>
+                                <p>Your transaction history is listed here. You can view details about each transaction.</p>
+                                <table class="table table-dark">
+                                    <thead>
+                                        <tr>
+                                            <th>Date</th>
+                                            <th>Description</th>
+                                            <th>Amount</th>
+                                            <th>Status</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>October 1, 2024</td>
+                                            <td>Subscription Fee</td>
+                                            <td>$9.99</td>
+                                            <td>Completed</td>
+                                        </tr>
+                                        <tr>
+                                            <td>September 15, 2024</td>
+                                            <td>Invoice #1234</td>
+                                            <td>$19.99</td>
+                                            <td>Completed</td>
+                                        </tr>
+                                        <tr>
+                                            <td>August 30, 2024</td>
+                                            <td>Refund for Invoice #1234</td>
+                                            <td>-$19.99</td>
+                                            <td>Completed</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        `;
+                        break;
+                    case 'account':
+                        content = `
+                            <div class="content-block">
+                                <h4>Account Settings</h4>
+                                <p>Manage your account settings here. Update your profile information and security settings.</p>
+                                <form>
+                                    <div class="form-group">
+                                        <label for="username">Username</label>
+                                        <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email">Email</label>
+                                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                                </form>
+                            </div>
+                        `;
+                        break;
+                    case 'settings':
+                        content = `
+                            <div class="content-block">
+                                <h4>Settings</h4>
+                                <p>Configure your application settings here.</p>
+                                <ul>
+                                    <li>Notification Preferences</li>
+                                    <li>Language Settings</li>
+                                    <li>Privacy Settings</li>
+                                </ul>
+                            </div>
+                        `;
+                        break;
+                    default:
+                        content = <div class="content-block">No content available.</div>;
+                }
 
+                // Update dashboard content
                 dashboard.innerHTML = content;
-            })
-            .catch(error => console.error('Error fetching news:', error));
+
+                // If the dashboard is selected, fetch the news
+                if (contentType === 'dashboard') {
+                    fetchNews();
+                }
+            };
+
+            // Fetch finance news
+            const fetchNews = async () => {
+                // Show loader while fetching
+                dashboard.innerHTML = '<div class="loader"></div>';
+
+                try {
+                    const response = await fetch('https://newsapi.org/v2/everything?q=finance&apiKey=91e4cec7ae99466bb4b50dd8788291c1');
+                    const data = await response.json();
+
+                    let newsContent = '';
+                    data.articles.forEach(article => {
+                        newsContent += `
+                            <div class="content-block">
+                                <h5>${article.title}</h5>
+                                <img src="${article.urlToImage}" alt="${article.title}" style="width: 100%; border-radius: 8px;">
+                                <p>${article.description}</p>
+                                <a href="${article.url}" target="_blank" class="btn btn-danger">Read More</a>
+                            </div>
+                        `;
+                    });
+
+                    // Update dashboard with news content
+                    dashboard.innerHTML = newsContent;
+                } catch (error) {
+                    dashboard.innerHTML = '<div>Error fetching news. Please try again later.</div>';
+                }
+            };
+
+            // Attach click event to navigation links
+            navLinks.forEach(link => {
+                link.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const contentType = this.getAttribute('data-content');
+                    loadContent(contentType);
+                    body.classList.remove('sidebar-open'); // Close sidebar
+                });
+            });
+
+            // Load default content (dashboard)
+            loadContent('dashboard');
         });
     </script>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
