--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, black, red);
+            background: linear-gradient(135deg, black, #eacb47bc);
             color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
             position: relative;
+            overflow: hidden;
         }
         .corner-decor {
             position: absolute;
@@ -24,7 +24,7 @@
             border-radius: 50%;
         }
         .corner-decor.top-left {
-            top: -75px;
+            top: -65px;
             left: -75px;
         }
         .corner-decor.bottom-left {
@@ -99,7 +99,7 @@
         }
         input[type="submit"] {
             padding: 10px;
-            background-color: red;
+            background-color:#006400;
             color: white;
             border: none;
             border-radius: 5px;
@@ -107,7 +107,7 @@
             width: 100%;
         }
         input[type="submit"]:hover {
-            background-color: darkred;
+            background-color: #228b22;
         }
         label {
             display: block;
