--- a/dashboard.html
+++ b/dashboard.html
@@ -251,9 +251,7 @@
                                 <p>Here you can manage your billing information, view past invoices, and update payment methods.</p>
                                 <ul>
                                     <li>Billing Address: 123 Main St, Anytown</li>
-                                    <li>Payment Method: Credit Card (**
-**
-** 1234)</li>
+                                    <li>Payment Method: Credit Card (**** **** **** 1234)</li>
                                     <li>Last Payment Date: January 1, 2024</li>
                                     <li>Upcoming Payment: January 15, 2024</li>
                                 </ul>
@@ -331,7 +329,7 @@
                         `;
                         break;
                     default:
-                        content = <div class="content-block">No content available.</div>;
+                        content = `<div class="content-block">No content available.</div>`;
                 }
 
                 // Update dashboard content
