--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
-            font-family: 'Arial', sans-serif
+            font-family: 'Arial', sans-serif;
             background-color: #111;
             color: #fff;
             display: flex;
